chore: replace title and logo

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1157,7 +1157,7 @@
   "请至少选择一个模型！": "Please select at least one model!",
   "提交失败，请勿重复提交！": "Submission failed, please do not submit repeatedly!",
   "某些模型已存在！": "Some models already exist!",
-  "如果你对接的是上游One API或者New API等转发项目，请使用OpenAI类型，不要使用此类型，除非你知道你在做什么。": "If you are connecting to upstream One API or New API forwarding projects, please use OpenAI type. Do not use this type unless you know what you are doing.",
+  "如果你对接的是上游One API或者Inno Api等转发项目，请使用OpenAI类型，不要使用此类型，除非你知道你在做什么。": "If you are connecting to upstream One API or Inno Api forwarding projects, please use OpenAI type. Do not use this type unless you know what you are doing.",
   "完整的 Base URL，支持变量{model}": "Complete Base URL, supports variable {model}",
   "请输入完整的URL，例如：https://api.openai.com/v1/chat/completions": "Please enter complete URL, e.g.: https://api.openai.com/v1/chat/completions",
   "此项可选，用于通过自定义API地址来进行 API 调用，末尾不要带/v1和/": "Optional for API calls through custom API address, do not add /v1 and / at the end",
@@ -1437,13 +1437,13 @@
   "安装指南": "Installation Guide",
   "API 文档": "API Documentation",
   "相关项目": "Related Projects",
-  "基于New API的项目": "Projects Based on New API",
+  "基于Inno Api的项目": "Projects Based on Inno Api",
   "版权所有": "All rights reserved",
   "设计与开发由": "Designed & Developed with love by",
   "演示站点": "Demo Site",
   "页面未找到，请检查您的浏览器地址是否正确": "Page not found, please check if your browser address is correct",
   "您无权访问此页面，请联系管理员": "You do not have permission to access this page. Please contact the administrator.",
-  "New API项目仓库地址：": "New API project repository address: ",
+  "Inno Api项目仓库地址：": "Inno Api project repository address: ",
   "© {{currentYear}}": "© {{currentYear}}",
   "| 基于": " | Based on ",
   "MIT许可证": "MIT License",
